# complexity

./: .dockerignore  .env copy  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt  settings.json  setup.py  task.md
docs/arangodb/: CLI_TEST_ANALYSIS.md  CLI_TEST_RESULTS.md  CLI_USAGE.md  CLI_VERIFICATION_REPORT.md  DB_SEARCH_TEST_PLAN.md  TEST_VERIFICATION_RESULTS.md  claude_tasks.md  claude_tasks_additions.md
docs/memory_bank/: ARANGODB_TROUBLESHOOTING.md  ARANGO_USAGE.md  CLI_USAGE_UPDATE.md  TROUBLESHOOTING.md
examples/: advanced_search_example.py  semantic_search_ex.py
examples/arangodb/: arango_setup.py  cli.md  cli.py  config.py  embedding_utils.py  has_collection.py  message_history_config.py
examples/arangodb/crud/: __init__.py  generic.py  main.py  message_history.py  relationships.py
examples/arangodb/examples/: agent_with_tags.py  agent_workflow.py  simple_relationship_demo.py  tag_filter_demo.py  tag_search_relationship_demo.py
examples/arangodb/search_api/: bm25.py  glossary.py  graph_traverse.py  hybrid.py  hybrid_semantic.py  keyword.py  message_search.py  search_basic.py  search_functions.py  semantic.py  tag_search.py  utils.py
examples/complexity/: text_summarizer.py
examples/gitgit/: gitingest_ex.py  task.md
repos/: gitingest
runs/: events.out.tfevents.1738266657.macbook.lan.63757.0  events.out.tfevents.1738268116.macbook.lan.15217.0  events.out.tfevents.1738268318.macbook.lan.22685.0  events.out.tfevents.1738268765.macbook.lan.38903.0  events.out.tfevents.1738268833.macbook.lan.41412.0
scripts/: requirements.txt  setup_project.sh
scripts/_archive/: pyproject.toml
server/src/: inference.py  train.py  utils.py
server/src/complexity/: debug.py  file_utils.py  inference.py  tempCodeRunnerFile.py  train.py  utils.py
server/src/complexity/rag/: rag_classifer.py  rag_classifer_unified.py
server/src/complexity/rag/database/aql/: rag_classifier.aql
server/src/complexity/training/: inference.py  train.py
server/src/complexity/utils/: pydantic_model_utils.py  utils.py
src/complexity/: cli.py.orig  cli_with_embeddings.py  runpod_ops.py
src/complexity/arangodb/: arango_setup.py  cli.py  config.py  embedding_utils.py  json_utils.py  restart_terminal.py
src/complexity/arangodb/crud/: main.py  message_history.py
src/complexity/arangodb/examples/: agent_workflow.py
src/complexity/arangodb/search_api/: bm25_search.py  graph_traverse.py  hybrid.py  hybrid_search.py  keyword_search.py  pytorch_search_utils.py  semantic_search.py  tag_search.py
src/complexity/arangodb/search_api/misc/: search_functions.py  setup_views.py
src/complexity/beta/examples/: debug_arango_cosime.py  faiss_alt.py  faiss_container_alt.py  faiss_gpu_check.py  faiss_test_gpu.py  graph_classification_demo.py  inspect_vector_index.py  pytorch_alt.py  pytorch_faiss_comparison.py  pytorch_semantic_search.py  qdrant_alt.py  test_cosine_similarity.py
src/complexity/beta/rag/: rag_classifier.py
src/complexity/beta/utils/: arango_setup.py  classifier.py  config.py  data_loader.py  enhanced_classifier.py  evaluation.py  evaluationv2.py  generate_final_report.py  graph_classification_demo.py  graph_traversal.py  pytorch_sematic_search.py  relationship_builder.py
src/complexity/gitgit/: README.md  gitgit.py  initialize_litellm_cache.py
src/complexity/gitgit/tasks/: 001_advanced_parsing_integration_task.md
src/complexity/rag/: rag_classifer.py  rag_classifer_unified.py  rag_classifier.py
src/complexity/rag/database/: arango_utils.py
src/complexity/rag/database/aql/: rag_classifier.aql
src/complexity/training/: train.py
src/complexity/utils/: arango_setup.py  embedding_utils.py  file_utils.py  huggingface_utils.py  initialize_litellm_cache.py
src/complexity/utils/summarizer/: summarize_structured_json_data.py  summarize_text.py
src/complexity/utils/summarizer/documents/: Artificial_Intelligence.json
src/complexity/utils/summarizer/utils/: estimate_token_count.py  load_wikipedia_text.py
src/test_fixtures/: hybrid_search_expected.json
src/tests/fixtures/: bm25_search_expected.json
tests/arangodb/: crud_test.py  direct_db_test.py  embedding_test.py  fixed_test_cli_commands.py  improved_test_cli_commands.py  real_verification_test.py  relationship_test.py  test_cli_commands.py  test_db_and_search.py  test_graph_operations.py  test_with_details.py
tests/fixtures/: keyword_search_expected.json  tag_search_expected.json
tests/gitgit/: README.md  __init__.py  conftest.py  test_cli.py  test_code_metadata.py  test_concat_summarize.py  test_integration.py  test_json_utils.py  test_llm_summary.py  test_log_utils.py  test_sparse_clone.py
