[project]
name = "complexity"
version = "0.1.0"
description = "Complexity classification system"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Main dependencies
dependencies = [
    "datasets",
    "pandas",
    "matplotlib",
    "seaborn",
    "python-dotenv",
    "litellm",
    "requests",
    "markdownify",
    "tenacity>=9.0.0",
    "loguru>=0.7.3",
    "spacy>=3.8.4",
    "python-arango>=8.1.4",
    "deepmerge>=2.0",
    "torch>=2.2.2",
    "transformers>=4.48.1",
    "sentence-transformers>=3.4.0",
    "nltk>=3.9.1",
    "pyperclip>=1.9.0",
    "json-repair>=0.35.0",
    "rapidfuzz>=3.11.0"
]

# Build system configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Package discovery settings
[tool.setuptools]
package-dir = {"" = "server/src"}

[tool.setuptools.packages.find]
where = ["server/src"]
include = ["complexity", "complexity.*"]

# Include all Python files as package data
[tool.setuptools.package-data]
complexity = ["**/*.py"]

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyterlab",
    "pre-commit>=3.6.0"
]

# UV-specific configurations
[tool.uv]
# Add any UV-specific configurations here if needed
