[project]
name = "smolagent_tests"
version = "0.1.0"
description = "Explorations with smolagents from https://huggingface.co/docs/smolagents/"
authors = [
    { name = "Graham Anderson", email = "graham@grahama.co" }
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2024.12.14",
    "distro==1.9.0",
    "exceptiongroup==1.2.2",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jiter==0.8.2",
    "loguru==0.7.3",
    "numpy==1.26.4",
    "openai==1.60.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pytest==8.0.2",
    "python-dotenv==1.0.1",
    "scipy==1.15.1",
    "sniffio==1.3.1",
    "spacy==3.8.1",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "litellm==1.59.8",
    "tenacity>=9.0.0",
    "datasets>=3.2.0",
    "pymupdf4llm>=0.0.17",
    "fitz>=0.0.1.dev2",
    "camelot-py[base]>=1.0.0",
    "opencv-python-headless==4.7.0.72",
    "rtree>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
exclude = ["smolagents"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/student_teacher"]
